# common-motion-2d

./: Cargo.toml
backup/: cleaned_test.txt  cleaned_train.txt  inference_tests.md  test.csv  test.txt  tokenizer-all-wordpiece-ind.json  tokenizer-all-wordpiece.json  tokenizer-all.json  tokenizer.json  train.csv  train.txt  vocab-all.txt  vocab.txt
src/: inference.rs  lib.rs  main.rs  model.rs  sampling.rs  training.rs
src/data/: batcher.rs  dataset.rs  tokenizer.rs
