[package]
name = "common-motion-2d"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.15.0", features = ["wgpu", "dataset", "network", "train"] }
serde = "1.0.215"
serde_json = "1.0.133"
rayon = "1.10.0"
tokenizers = {version = "0.21.0", default-features = false, features = [
  "onig",
  "http",
]}
derive-new = "0.7.0"
csv = "1.3.1"